(ocamllex lexer)
(ocamlyacc parser)

(executable
 (name main)
 (public_name tigerml)
 (modules :standard)
 (modules_without_implementation translate)
 (preprocess (pps ppx_deriving.show)))

(env
 (dev
  (flags
   (-w -4-33-40-41-42-43-34-44 -short-paths -strict-sequence -strict-formats
       -short-paths -keep-locs)))
 (release
  (flags
   (-w K -O3))))
